[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ladhe-rsa"
version = "0.1.0"
description = "Reference implementation of the Ladhe-RSA post-quantum signature scheme"
readme = "README.md"
license = { text = "CC-BY-4.0" }
authors = [
    { name = "Shubham Ladhe", email = "spalgorithm@gmail.com" },
    { name = "Pankaj Ladhe",  email = "spalgorithm@gmail.com" },
]
keywords = ["cryptography", "post-quantum", "signature", "LDP", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage    = "https://github.com/SPAlgorithm/LE"
Paper       = "https://zenodo.org/records/19680322"
Dataset     = "https://zenodo.org/records/19354450"

[project.scripts]
ladhe-rsa = "ladhe_rsa:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ladhe_rsa*", "ladhe_cert*"]

[tool.setuptools.package-data]
"*" = ["LadheConjecture.txt"]
