[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ladhe-rsa"
version = "0.3.0"
description = "Ladhe: a one-time hash-based signature scheme from additive prime decompositions"
readme = "README.md"
license = { text = "CC-BY-4.0" }
authors = [
    { name = "Shubham Ladhe", email = "spalgorithm@gmail.com" },
    { name = "Pankaj Ladhe",  email = "spalgorithm@gmail.com" },
]
keywords = ["cryptography", "post-quantum", "signature", "LDP", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
# X.509 DER/PEM export for interop with OpenSSL and standard PKI tooling.
# Install with:  pip install ladhe-rsa[x509]
x509 = ["asn1crypto>=1.5"]

[project.urls]
Homepage    = "https://github.com/SPAlgorithm/LE"
Paper       = "https://zenodo.org/records/19680322"
Dataset     = "https://zenodo.org/records/19354450"

[project.scripts]
ladhe-rsa = "ladhe_rsa:main"

[tool.setuptools]
py-modules = [
    "ladhe_rsa",
    "ladhe_cert",
    "ladhe_cert_cli",
    "ladhe_x509",
]
